:sparkles: Added get endpoint to get a payment
