# api/swagger.yaml
@@ -11,7 +11,7 @@ info:
     url: "https://github.com/carlosroman/payments-api/LICENSE.md"
 
 host: "localhost"
-basePath: "/v1"
+basePath: "/"
 
 tags:
 - name: "payment"
@@ -46,7 +46,30 @@ paths:
       responses:
         405:
           description: "Invalid input"
-
+  /payment/{paymentId}:
+    get:
+      tags:
+      - "payment"
+      summary: "Find payment by ID"
+      description: "Returns a single payment"
+      operationId: "getPaymentById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "paymentId"
+        in: "path"
+        description: "ID of payment to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Payment"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Payment not found"
 definitions:
   Payment:
     type: "object"
